# TensorRT

./: .gitignore  CMakeLists.txt  Readme.md
plugin/: CMakeLists.txt  InferPlugin.cpp
plugin/scatterNDPlugin/: trt_scatternd.cpp  trt_scatternd.hpp
samples/opensource/sampleClassification/: CMakeLists.txt  classification.cpp  utils.h
